Fix spacing in reviews

--- a/app/assets/stylesheets/business_profile.scss
+++ b/app/assets/stylesheets/business_profile.scss
@@ -187,6 +187,7 @@
 
 .business-review-link a {
     text-decoration: none;   
+    color: purple;
 }
 
 .business-review-link a:hover {
