--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,31 +1,38 @@
+#all-reviews {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    width: 100%;
+}
+
 .reviews-section {
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin-left: 8px;
+    margin-right: 8px;
     border-top: 1px solid #e6e6e6;
     border-bottom: 1px solid #e6e6e6;
     padding: 5px;
-    width: 100%;
 }
 
 
 #userprofile {
-    grid-column: 1;
     display: flex;
-    justify-content: center;
-    text-align: center;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-top: 5px;
-    width: 200px;
+    // background-color: yellow;
+    min-width: 150px;
 }
 
 .reviews {
-    grid-column: 2;
     padding: 30px;
     font-family: Helvetica Neue, Arial, Helvetica;
     display: flex;
     flex-direction: column;
     justify-content: left;
-    // width: 850px;
 }
 
 #stars-and-date {
@@ -47,7 +54,7 @@
     margin-right: -3px;
 }
 
-.reviews #comment > {
+.reviews #comment {
     font-size: 14px;
     margin-top: 5px;
 }
